--- a/popup.html
+++ b/popup.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Like! Page History Saver</title>
+    <script src="popup.js"></script>
+  </head>
+  <body style="background-color: #0e83cd;">
+    <h1>Like!</h1>
+		<h3>Save page?</h3>
+    <button id="runAPI" style="border: 3px solid #fff; color: #737373;">Like! this page</button>
+  </body>
+</html>
